--- a/src/main/resources/templates/exhibitioninfo/isrecommend.html
+++ b/src/main/resources/templates/exhibitioninfo/isrecommend.html
@@ -20,6 +20,7 @@
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
+                    <input th:field="*{halurl}" type="hidden"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
                 </form>
             </div>
