--- a/src/main/resources/templates/article/input.html
+++ b/src/main/resources/templates/article/input.html
@@ -62,6 +62,7 @@
 <!--                    </div>-->
 <!--                </div>-->
                 <input th:field="*{id}" type="hidden"/>
+                <input th:field="*{sort}" type="hidden"/>
                 <input th:field="*{headpicture}" type="hidden" id="im"/>
 <!--                <input th:field="*{picture}" type="hidden" id="ims"/>-->
                 <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
