--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -85,7 +85,7 @@
                         <dd><a href="javascript:;" menuid="801" menuurl='<iframe src="/platform/stationinfo/list" width="100%" height="100%;" frameborder="0"></iframe>'>站内信管理</a></dd>
                         <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/video/list" width="100%" height="100%;" frameborder="0"></iframe>'>精彩视频上传</a></dd>
                         <dd><a href="javascript:;" menuid="803" menuurl='<iframe src="/platform/atlas/list" width="100%" height="100%;" frameborder="0"></iframe>'>精彩图集上传</a></dd>
-
+                        <dd><a href="javascript:;" menuid="804" menuurl='<iframe src="/platform/vmwarelive/list" width="100%" height="100%;" frameborder="0"></iframe>'>虚拟直播管理</a></dd>
                     </dl>
                 </li>
             </ul>
