--- a/src/main/resources/templates/live/list.html
+++ b/src/main/resources/templates/live/list.html
@@ -110,6 +110,7 @@
         <script type="text/html" id="titleToolbar">
             <div class="layui-btn-container">
                 <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-circle" title="添加"></i>添加</button>
+                <button class="layui-btn layui-btn-sm" lay-event="stoplive"><i class="layui-icon layui-icon-add-circle" title="停播"></i>停播</button>
             </div>
         </script>
 
