多图片上传

--- a/src/main/resources/templates/atlas/list.html
+++ b/src/main/resources/templates/atlas/list.html
@@ -60,7 +60,8 @@
 
         <script type="text/html" id="titleToolbar">
             <div class="layui-btn-container">
-                <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-circle" title="添加"></i>添加</button>
+                <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-circle" title="添加单个"></i>添加单个</button>
+                <button class="layui-btn layui-btn-sm" lay-event="addmultiple"><i class="layui-icon layui-icon-add-circle" title="添加多个"></i>添加多个</button>
             </div>
         </script>
 
