--- a/src/main/resources/templates/atlas/inputmultiple.html
+++ b/src/main/resources/templates/atlas/inputmultiple.html
@@ -18,10 +18,11 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">图片</label>
                         <div class="layui-upload">
-                            <button type="button" class="layui-btn" id="test1">上传</button>
-                            <div class="layui-upload-list" style="margin-left: 100px;">
-                                <img class="layui-upload-img" id="demo1" th:src="*{imgUrl}" width="200">
-                            </div>
+                            <button type="button" class="layui-btn" id="test2">多图片上传</button>
+                            <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
+                                预览图：
+                                <div class="layui-upload-list" id="demo2"></div>
+                            </blockquote>
                         </div>
                     </div>
                     <div class="layui-form-item" th:if="*{sort!=null}">
@@ -31,8 +32,6 @@
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
-                    <input th:field="*{wide}" type="hidden" id="wide"/>
-                    <input th:field="*{high}" type="hidden" id="high"/>
                     <input th:field="*{imgUrl}" type="hidden" id="imgUrl"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
                 </form>
@@ -53,7 +52,7 @@
                     return false;
                 }
 
-                var resultData = core.ajax('/platform/atlas/saveOrUpdate',false,'POST',data.field);
+                var resultData = core.ajax('/platform/atlas/saveOrUpdateMuilt',false,'POST',data.field);
                 if(resultData!=false){
                     parent.layer.msg('操作成功',core.showtime);
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
@@ -62,41 +61,31 @@
                 return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
             });
 
-            //普通图片上传
-            var uploadInst = upload.render({
-                elem: '#test1'
-                , url: '/api/upLoadByHttp?remarks=' + 3 //改成您自己的上传接口
-                , before: function (obj) {
+            var url = "";
+            //多图片上传
+            upload.render({
+                elem: '#test2'
+                ,url: '/api/upLoadByHttp?remarks=' + 3 //改成您自己的上传接口
+                ,multiple: true
+                ,before: function(obj){
                     //预读本地文件示例，不支持ie8
-                    obj.preview(function (index, file, result) {
-                        $('#demo1').attr('src', result); //图片链接（base64）
-                        var img = new Image();
-                        img.src = result;
-                        img.onload = function () { //初始化夹在完成后获取上传图片宽高，判断限制上传图片的大小。
-                            var chang = 0;
-                            var kuan = 0;
-                            if (img.width > img.height) {  // 判断出最长边和最短边
-                                var chang = img.width;
-                                var kuan = img.height;
-                            } else {
-                                var chang = img.height;
-                                var kuan = img.width;
-                            }
-                            $('#wide').val(chang);
-                            $('#high').val(kuan);
-                        }
+                    obj.preview(function(index, file, result){
+                        $('#demo2').append('<img src="'+ result +'" alt="'+ file.name +'" class="layui-upload-img" width="200px" style="padding-left: 10px;">')
                     });
                 }
-                , done: function (res) {
-                    //如果上传失败
-                    if (res.code != 200) {
-                        return layer.msg('上传失败');
-                    }
-                    if (res.code == 200) {
-                        $('#imgUrl').val(res.data[0].url);
-                        return layer.msg('上传成功！');
-                    }
+                ,allDone: function(obj){ //当文件全部被提交后，才触发
+                    console.log(obj.total); //得到总文件数
+                    console.log(obj.successful); //请求成功的文件数
+                    console.log(obj.aborted); //请求失败的文件数
+                    $('#imgUrl').val(url);
+                    return layer.msg('上传成功！');
+                }
+                ,done: function(res){
                     //上传成功
+                    if (res.code == 200) {
+                        console.log(JSON.stringify(res));
+                        url = url + res.data[0].url+",";
+                    }
                 }
             });
         });
