--- a/src/main/resources/templates/exhibitioninfo/list2.html
+++ b/src/main/resources/templates/exhibitioninfo/list2.html
@@ -176,7 +176,8 @@
         <script type="text/html" id="rowToolBar">
             <a class="layui-btn layui-btn-xs" lay-event="isrecommend"><i class="layui-icon layui-icon-form" title="推荐"></i>推荐</a>
             <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit" title="审核"></i>编辑</a>
-            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-form" title="审核"></i>审核</a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="shenhe"><i class="layui-icon layui-icon-form" title="审核"></i>审核</a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-form" title="删除"></i>删除</a>
         </script>
         <script type="text/javascript" th:src="@{/static/js/exhibitioninfo/exhibition2info.js}"></script>
     </body>
