--- a/src/main/resources/templates/article/input.html
+++ b/src/main/resources/templates/article/input.html
@@ -17,6 +17,7 @@
                     <label class="layui-form-label">头图</label>
                     <div class="layui-upload">
                         <button type="button" class="layui-btn" id="test1">上传</button>
+                        <span style="color: #9F9F9F">（建议上传330px*330px）</span>
                         <div class="layui-upload-list" style="margin-left: 100px;">
                             <img class="layui-upload-img" id="demo1" th:src="*{headpicture}" width="200">
                         </div>
